views: have scrollview mark its contents as non-opaque

ScrollView, when using layers to scroll, imposes a layer on its contents;
doing so implies by default that the contents opaquely fill their entire
bounds. This is not true for many kinds of contents, so don't assume it to
avoid patches of un-drawn area.

Bug: 826472
Change-Id: I1364c06f43241e6cecbc4eaddb20311047b89bdf
Reviewed-on: https://chromium-review.googlesource.com/987527
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547448}
Former-commit-id: 6e4083439bbb6764ca940db97417358a15f75716